--- a/index.html
+++ b/index.html
@@ -1,52 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - Click and draw some flowers</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name='author' content='Changhui Xu'>
+    <meta name='original-source' content='https://github.com/changhuixu/canvas-animation-step-by-step'>
+    <title>Canvas Animation</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+    <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#ff24f1">
+    <meta name="apple-mobile-web-app-title" content="Flowers">
+    <meta name="application-name" content="Flowers">
+    <meta name="msapplication-TileColor" content="#bdffe2">
+    <meta name="theme-color" content="#bdffe2">
+<script defer src="main.bundle.js"></script></head>
 
-</head>
 <body>
-<!-- partial:index.partial.html -->
-<svg class="root">
-  <defs>
-      <filter id="f" width="200" height="200" x="-100"  y="-100" >
-       <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="blur"></feGaussianBlur>
-       <feFlood flood-color="rgb(60,10,60)" result="color"/>
-       <feComposite in="color" in2="blur" operator="in" result="shadow" />
-       <feOffset in="shadow" dx="3" dy="3" result="offset"></feOffset>
-       <feMerge>
-          <feMergeNode in="offset" />
-          <feMergeNode in="SourceGraphic" />
-      </feMerge>  
-    </filter>
-  <symbol id="petal2" viewBox = "0 -100 200 200"  >
-  <!--<polygon points="0,0 120,80 200,0 120,-80 0,0" />-->
-  <path transform="translate(0,-100)" d="M25.91,-15.12 Q0,0 25.91,15.12L94.09,54.889 Q120,70 142.58,50.24L177.42,19.76 Q200,0 177.42,-19.756L142.58,-50.24 Q120,-70 94.087,-54.88Z"></path>
-  </symbol>
-    
-  <symbol id="petal3"  viewBox = "0 -100 200 200" >
-     <!--<polygon points="0,0 120,50 200,0 120,-50 0,0" />-->
-  <path transform="translate(0,-100)" d="M27.69,-11.54  Q0,0 27.69,11.54  L92.3,38.46  Q120,50 145.44,34.1 L174.56,15.9  Q200,0 174.56,-15.9 L145.44,-34.1 Q120,-50 92.3,-38.46Z" ></path>
-   </symbol>
-    
-    <symbol id="petal4"  viewBox = "0 -100 200 200" >
-<!--<polygon points="0,0 120,50 200,0 120,-50 0,0" />-->  
-<path transform="translate(0,-100)"  d="M28.09,-10.53 Q0,0 28.09,10.53L91.91,34.47 Q120,45 146.147,30.29L173.85,14.7 Q200,0 173.85,-14.7L146.15,-30.29 Q120,-45 91.91,-34.467Z"></path>
-   </symbol>
-      <symbol id="petal5"  viewBox = "0 -100 200 200" >
-    <!--<polygon points="0,0 140,40 200,0 140,-40 0,0" />-->
-  <path transform="translate(0,-100)"   d="M28.85,-8.24 Q0,0 28.85,8.24L111.15,31.76 Q140,40 164.96,23.36L175.04,16.64 Q200,0 175.038,-16.64L164.96,-23.36 Q140,-40 111.15,-31.76Z"></path>
-  </symbol>
-  </defs>
-</svg>
-
-<svg viewBox="0 0 10000 10000" id="svg" preserveAspectRatio="xMidYMid slice">
-
-</svg>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+    <main class="app">
+        <div class="instruction">
+            <button id="clearBtn">Reset</button>
+        </div>
+        <canvas id="flowers" width="1000" height="600"></canvas>
+    </main>
 </body>
+
 </html>
