--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name='author' content='Changhui Xu'>
     <meta name='original-source' content='https://github.com/changhuixu/canvas-animation-step-by-step'>
-    <title>Canvas Animation</title>
+    <title>Buat Alma Tersayang :)</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="./manifest.json">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
@@ -22,10 +22,11 @@
 
 <body>
     <main class="app">
+        <canvas id="flowers" width="1000" height="600"></canvas>
         <div class="instruction">
+            <h1>Have a wonderful daaayy ❤️ ❤️ ❤️ </h1>
             <button id="clearBtn">Reset</button>
         </div>
-        <canvas id="flowers" width="1000" height="600"></canvas>
     </main>
 </body>
 
